# Cybersec-vulnerabilities-scanner

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/scanner/: __init__.py  engine.py  models.py  scoring.py
src/scanner/checks/: __init__.py  base.py  content.py  cookies.py  disclosure.py  dns_email.py  fingerprint.py  headers.py  tls.py
src/scanner/remediation/: __init__.py  fixes.py
src/scanner/reporting/: __init__.py  cli.py  html.py
src/scanner/safety/: __init__.py  ssrf.py
tests/: conftest.py  test_app_security.py  test_checks.py  test_remediation.py  test_report.py  test_scoring.py  test_ssrf.py
web/: app.py
web/static/css/: app.css
web/static/js/: app.js
web/templates/: index.html
